--- a/old/global.css
+++ b/old/global.css
@@ -6,8 +6,10 @@ body {
     box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
         rgba(50, 50, 93, 0.1) 0 2px 5px 0, rgba(0, 0, 0, 0.07) 0 1px 1px 0;
     padding: 30px;
-    width: 600px;
+    width: 500px;
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     box-sizing: border-box;
 }
 #old,
